--- a/ags/style.scss
+++ b/ags/style.scss
@@ -69,7 +69,7 @@ $wayland-bar-margin: 6px;
 
   .movie-when {
     margin-top: 4px;
-    font-size: 14x;
+    font-size: 14px;
     font-weight: bold;
   }
 
