--- a/ags/style.scss
+++ b/ags/style.scss
@@ -103,6 +103,11 @@ $wayland-bar-margin: 6px;
     background-color: #5E2C70;
     color: #CCCBCA;
     border-radius: 100%;
+
+    image {
+      color: #CCCBCA;
+      background-color: #5E2C70;
+    }
   }
 }
 
